# SmartSubs

./: .env.example  README.md  main.py  pyproject.toml  transcribe.py  video_split.py
